# ENPM808X_Midterm_Proposal

./: .gitignore  CMakeLists.txt  LICENSE.md  readme.md  yolosetup.sh
.github/workflows/: build_and_coveralls.yml
app/: CMakeLists.txt  main.cpp  perception.cpp
app/src/: CMakeLists.txt  camera.cpp  detector.cpp  human_tracker.cpp  perception.cpp  person.cpp  tracker.cpp
doxygen/: Doxyfile.bak
include/: camera.hpp  detector.hpp  human_tracker.hpp  lib.hpp  perception.h  perception.hpp  person.hpp  tracker.hpp  yolo.hpp  yolo.txt
results/: cppcheck.txt  cppcheck_process.txt  cppcheck_result.txt  cpplint.txt  cpplint_result.txt
submission/proposal/Proposal/: main.tex
submission/quad_chart/: Quad Chart.drawio
submission/uml/: Source_Activiy.drawio
test/: CMakeLists.txt  main.cpp  test.cpp
